Bug 410152 - Wrong tool bar icon for adding 'state' widgets
Summary: Wrong tool bar icon for adding 'state' widgets
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-24 10:20 UTC by Ralf Habacker
Modified: 2019-08-02 05:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.28.90 (KDE Applications 19.07.90)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-07-24 10:20:55 UTC
The symbol in the toolbar for adding states to state diagrams does not correspond to the representation of states, it shows the symbol for use cases.

STEPS TO REPRODUCE
1. start umbrello
2. add state diagram

OBSERVED RESULT
The use case icon is displayed in the toolbar for adding states.

EXPECTED RESULT
There should be displayed the correct icon
Comment 1 Ralf Habacker 2019-07-24 10:22:28 UTC
Git commit 4023aa0e81e82f5c7e8d643c95fda934f0590d07 by Ralf Habacker.
Committed on 24/07/2019 at 10:21.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'Wrong tool bar icon for adding "state" widgets'
FIXED-IN:2.28.90 (KDE Applications 19.07.90)

M  +1    -1    umbrello/icon_utils.cpp
M  +2    -0    umbrello/icons.qrc
M  +1    -1    umbrello/menus/listpopupmenu.cpp
M  +2    -1    umbrello/menus/umlscenepopupmenu.cpp
M  +2    -0    umbrello/pics/CMakeLists.txt
A  +-    --    umbrello/pics/cursor-state.png
A  +201  -0    umbrello/pics/sources/state.svg
A  +-    --    umbrello/pics/state.png

https://commits.kde.org/umbrello/4023aa0e81e82f5c7e8d643c95fda934f0590d07
Comment 2 Ralf Habacker 2019-08-02 05:26:57 UTC
Git commit b77695c4642e4c9b79d3c3fce3def99e9cf82b0f by Ralf Habacker.
Committed on 02/08/2019 at 05:26.
Pushed by habacker into branch 'Applications/19.08'.

Fixup of icons for adding states

The shape of the symbol has been modified to look more similar to the state widget.

M  +-    --    umbrello/pics/cursor-state.png
M  +9    -9    umbrello/pics/sources/state.svg
M  +-    --    umbrello/pics/state.png

https://commits.kde.org/umbrello/b77695c4642e4c9b79d3c3fce3def99e9cf82b0f