Fix 'Wrong tool bar icon for adding "state" widgets'

BUG:410152
FIXED-IN:2.28.90 (KDE Applications 19.07.90)